# oveus-tfhe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compare-fft.def  compare-tfhers.def  format.bash
.github/workflows/: benchmark.yml  compare-tfhers.yml  test.yml
bench-tfhers/: CMakeCache.txt  Makefile  cmake_install.cmake
bench-tfhers/benchmark/: Makefile  cmake_install.cmake
bench-tfhers/benchmark/google-benchmark/: CTestTestfile.cmake  Makefile  benchmark.pc  benchmarkConfigVersion.cmake  benchmarkTargets.cmake  benchmark_main.pc  cmake_install.cmake
bench-tfhers/benchmark/google-benchmark/src/: Makefile  cmake_install.cmake
bench-tfhers/benchmark/google-benchmark/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bench-tfhers/src/: Makefile  cmake_install.cmake
bench-tfhers/test/: Makefile  cmake_install.cmake
bench-tfhers/thirdparties/AES/: Makefile  cmake_install.cmake
bench-tfhers/thirdparties/BLAKE3/c/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  libblake3.pc
bench-tfhers/thirdparties/BLAKE3/c/dependencies/: CTestTestfile.cmake  Makefile  cmake_install.cmake
bench-tfhers/thirdparties/concrete-fft/: Makefile  cmake_install.cmake
bench-tfhers/thirdparties/spqlios/: Makefile  cmake_install.cmake
benchmark/: bench.cpp  bench_fft.cpp
include/: INTorus.hpp  bfv++.hpp  bfv-clpx.hpp  circuitbootstrapping.hpp  cloudkey.hpp  cuhe++.hpp  detwfa.hpp  gate.hpp  gatebootstrapping.hpp  key.hpp  keyswitch.hpp  lweParams.hpp  mulfft.hpp  params.hpp  tfhe++.hpp  tlwe.hpp  trgsw.hpp  utils.hpp
include/axell/: gate.hpp  integer.hpp  mpparam.hpp
include/externs/: detwfa.hpp
include/params/: 128bit.hpp  CGGI16.hpp  CGGI19.hpp  concrete.hpp  tfhe-rs.hpp
src/: CMakeLists.txt  circuitbootstrapping.cpp  cloudkey.cpp  detwfa.cpp  gate.cpp  gatebootstrapping.cpp  key.cpp  tlwe.cpp
src/axell/: gate.cpp
test/: CMakeLists.txt  INTorus.cpp  annihilatecircuitbootstrapping.cpp  bitsequencerepresentation.cpp.deprecated  circuitbootstrapping.cpp  cmux.cpp  combinedmem.cpp  cuhe++.cpp  gate.cpp  gatebootstrapping.cpp  iks.cpp  invcircuitbootstrapping.cpp  lwemul.cpp  nand.cpp  ram.cpp  rom.cpp  test.sh  tlweenc.cpp  trlwemult.cpp
test/axell/: 1brFullAdder.cpp  2bit1brAdder.cpp  2bit2brAdder.cpp  2brFullAdder.cpp  3inputfulladder.cpp  4input.cpp  CMakeLists.txt  Tree1brAdder.cpp  ao3.cpp  aoi3.cpp  fulladder.cpp  halfadder.cpp  oai3.cpp  swap.cpp  tfhe_integer.cpp  xornandnor.cpp
thirdparties/spqlios/: CMakeLists.txt  fft_processor_spqlios.cpp  spqlios-fft-fma.s  spqlios-ifft-fma.s  stockham_fft_avx2.cpp  x86.h
thirdparties/spqlios-intl/: CMakeLists.txt  fft_processor_spqlios_intl.cpp  fft_processor_spqlios_intl.h  intl-fft-fma.s
thirdparties/spqlios-stockham/: CMakeLists.txt  fft_processor_spqlios.cpp  fft_processor_spqlios.h  stockham-fft-fma.s
